added 2nd quotes in dev branch

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
 		<h1>I am learning git </h1>
 		<h2>I am making a second version of this file</h2>
-
+		<h3>From dev branch</h3>
 	</body>
 </html>
