--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 		<h1>I am learning git </h1>
 		<h2>I am making a second version of this file</h2>
-		<h3>From dev branch</h3>
+		<h3>From dev branch</h3> <p>I love coding</p>
+
 	</body>
 </html>
