--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 	<body>
 
 		<h1>I am learning git </h1>
-		<h2>I am making a second version of this file I have edit the code using github</h2>
-		<h3>From dev branch</h3> <p>I love coding</p>
+		<h2>I am making a second version of this file I have edit the code using github</h2>		<h3>From dev branch</h3> <p>I love coding</p>
+	<h3> Mr santosh </h3>
 
+	
 	</body>
 </html>
